test/fails/bad_generics/basics2.lgl
`t id<`t>(`t x) {
    return x;
}

void main() {
    bool fail = id<bool>(3);  // Must take 't'
}